# editor

./: .gitignore  Cargo.toml
playground/lsp_play/: Cargo.toml
playground/lsp_play/src/: error.rs  main.rs  msg.rs  socket.rs  stdio.rs
src/: buffer.rs  editor.rs  key.rs  lsp.rs  main.rs  rawmode.rs  terminal.rs  viewer.rs
src/buffer/: text_buffer.rs  text_viewer.rs
src/lsp/: client.rs  method.rs  msg.rs
src/lsp/method/: completion.rs  didchange.rs  hover.rs
src/viewer/: completion_viewer.rs  hover_viewer.rs  text_viewer.rs
