[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
termios = "0.3.3"
libc = "0.2.155"
ropey = "1.6.1"
anyhow = "1.0.86"
thiserror = "1.0.63"

lsp-types = "0.97.0"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console-subscriber = "0.1.0"
